--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mcmiddleearth</groupId>
     <artifactId>MCME-Events</artifactId>
-    <version>0.1</version>
+    <version>0.2</version>
     <packaging>jar</packaging>
     <name>MCME-Events</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <jackson.version>2.10.3</jackson.version>
     </properties>
     
     <build>
@@ -21,19 +22,19 @@
             </resource>
         </resources>
 	<plugins>
-		<plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
-                    <configuration>
-                            <source>1.7</source>
-                            <target>1.7</target>
-                    </configuration>
-		</plugin>
-                <plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.7</version>
+                <version>2.4.3</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -41,22 +42,13 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>true</minimizeJar>
-                            <relocations>
-                                <relocation>
-                                    <pattern>com.fasterxml</pattern>
-                                    <shadedPattern>com.mcmiddleearth.mcme.events.libs.com.fasterxml</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>org.eclipse</pattern>
-                                    <shadedPattern>com.mcmiddleearth.mcme.events.libs.org.eclipse</shadedPattern>
-                                </relocation>
-                            </relocations>
+                            <minimizeJar>false</minimizeJar>
                             <artifactSet>
-                                <excludes>
-                                    <exclude>org.projectlombok:lombok</exclude>
-                                    <exclude>org.bukkit:bukkit</exclude>
-                                </excludes>
+                                <includes>
+                                    <include> com.fasterxml.jackson.core:jackson-core </include>
+                                    <include> com.fasterxml.jackson.core:jackson-databind </include>
+                                    <include> com.fasterxml.jackson.core:jackson-annotations </include>
+                                </includes>
                             </artifactSet>
                         </configuration>
                     </execution>
@@ -73,19 +65,23 @@
             <id>sk89q-repo</id>
             <url>http://maven.sk89q.com/repo/</url>
         </repository>
+        <repository>
+            <id>placeholderapi</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
    </repositories>
    <dependencies>
     <!--Spigot-API-->
     <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
-        <version>1.10.2-R0.1-SNAPSHOT</version>
+        <version>1.15.2-R0.1-SNAPSHOT</version>
     </dependency>
     <!--Bukkit API-->
     <dependency>
         <groupId>org.bukkit</groupId>
         <artifactId>bukkit</artifactId>
-        <version>1.10.2-R0.1-SNAPSHOT</version>
+        <version>1.15.2-R0.1-SNAPSHOT</version>
     </dependency>
       <dependency>
          <groupId>org.projectlombok</groupId>
@@ -93,23 +89,47 @@
          <type>jar</type>
       </dependency>
       <dependency>
-         <groupId>com.fasterxml.jackson.core</groupId>
-         <artifactId>jackson-databind</artifactId>
-         <version>2.6.0-rc1</version>
-         <type>jar</type>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>${jackson.version}</version>
       </dependency>
       <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+         <version>${jackson.version}</version>
+         <type>jar</type>
+      </dependency>
+      <!--<dependency>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-server</artifactId>
          <version>9.1.0.v20131115</version>
-      </dependency>
+      </dependency>-->
       
       <!--WorldEdit API-->
-      <dependency>
-          <groupId>com.sk89q</groupId>
-          <artifactId>worldedit</artifactId>
-          <version>6.0.0-SNAPSHOT</version>
-      </dependency>
+        <dependency>
+            <groupId>com.sk89q.worldedit</groupId>
+            <artifactId>worldedit-bukkit</artifactId>
+            <version>7.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+         <groupId>me.clip</groupId>
+          <artifactId>placeholderapi</artifactId>
+          <version>2.10.5</version>
+         <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>mineverse.aust1n46</groupId>
+            <artifactId>VentureChat</artifactId>
+            <version>2.18.2</version>
+            <systemPath>D:\SystemRepository\VentureChat-2.18.2.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
    </dependencies>
    
    <dependencyManagement>
