--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ${project.artifactId}
 main: com.mcmiddleearth.mcme.events.Main
 version: ${project.version}
 authors: [DonoA, aaldim, lizzehface, meggawatts, Eriol_Eandur]
-depend: [WorldEdit]
+depend: [WorldEdit,PlaceholderAPI]
 api-version: 1.15
 
 commands:
