--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,23 @@
             <systemPath>D:\SystemRepository\VentureChat-2.18.2.jar</systemPath>
             <scope>system</scope>
         </dependency>
+       <dependency>
+           <groupId>net.md-5</groupId>
+           <artifactId>bungeecord-api</artifactId>
+           <version>1.15-SNAPSHOT</version>
+           <scope>provided</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.projectlombok</groupId>
+           <artifactId>lombok</artifactId>
+           <version>1.18.0</version>
+           <scope>compile</scope>
+       </dependency>
+       <dependency>
+           <groupId>com.googlecode.json-simple</groupId>
+           <artifactId>json-simple</artifactId>
+           <version>1.1.1</version>
+       </dependency>
    </dependencies>
    
  </project>
