--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
+       <dependency>
+           <groupId>org.json</groupId>
+           <artifactId>json</artifactId>
+           <version>20200518</version>
+       </dependency>
    </dependencies>
    
  </project>
