--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                                     <include> com.fasterxml.jackson.core:jackson-core </include>
                                     <include> com.fasterxml.jackson.core:jackson-databind </include>
                                     <include> com.fasterxml.jackson.core:jackson-annotations </include>
+                                    <include> org.json:json </include>
                                 </includes>
                             </artifactSet>
                         </configuration>
