--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,6 @@
          <artifactId>jetty-server</artifactId>
          <version>9.1.0.v20131115</version>
       </dependency>-->
-      
       <!--WorldEdit API-->
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
@@ -121,9 +120,8 @@
         <dependency>
             <groupId>mineverse.aust1n46</groupId>
             <artifactId>VentureChat</artifactId>
-            <version>2.18.2</version>
-            <systemPath>D:\SystemRepository\VentureChat-2.18.2.jar</systemPath>
-            <scope>system</scope>
+            <version>2.18.6</version>
+            <scope>provided</scope>
         </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
@@ -137,11 +135,19 @@
            <version>1.18.0</version>
            <scope>compile</scope>
        </dependency>
-       <dependency>
-           <groupId>com.googlecode.json-simple</groupId>
-           <artifactId>json-simple</artifactId>
-           <version>1.1.1</version>
-       </dependency>
+      <dependency>
+         <groupId>org.json</groupId>
+         <artifactId>json</artifactId>
+         <version>20200518</version>
+      </dependency>
    </dependencies>
-   
- </project>
+   <dependencyManagement>
+   	<dependencies>
+   		<dependency>
+   			<groupId>org.projectlombok</groupId>
+   			<artifactId>lombok</artifactId>
+   			<version>1.18.0</version>
+   		</dependency>
+   	</dependencies>
+   </dependencyManagement>
+</project>
