--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <id>placeholderapi</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        <repository>
+            <id>minecraft-libraries</id>
+            <name>Minecraft Libraries</name>
+            <url>https://libraries.minecraft.net</url>
+        </repository>
    </repositories>
    <dependencies>
     <!--Spigot-API-->
@@ -122,7 +127,8 @@
             <groupId>mineverse.aust1n46</groupId>
             <artifactId>VentureChat</artifactId>
             <version>2.18.6</version>
-            <scope>provided</scope>
+            <systemPath>D:\SystemRepository\VentureChat-2.18.6.jar</systemPath>
+            <scope>system</scope>
         </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
@@ -145,6 +151,11 @@
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20200518</version>
+       </dependency>
+       <dependency>
+           <groupId>com.mojang</groupId>
+           <artifactId>brigadier</artifactId>
+           <version>1.0.17</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
